--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" property="og:description" content="We're on a mission to make budgeting accessible and achievable for all. Through candid interviews, we showcase real people sharing their financial stories—the triumphs, the challenges, and the lessons they've learned along the way. These honest conversations aim to break down the barriers often surrounding personal finance, offering a path forward that feels practical and realistic." />
         <meta property="og:image" content="/assets/img/masthead.webp" />
-	    <meta property="og:title" content="Budget Therapy - Real Stories. Practical Steps." />	
-        <meta name="keywords" content="budget therapy, youtube, podcast, budgets, finances, financial interviews, budgeting help, saving money, budgeting stories, budgeting interviews, creating budgets, how to budget, track spending, track expenses, financial future, saving habits, denver colorado, budgeting success" />
+	    <meta property="og:title" content="Nic Aslett - Real Stories. Practical Steps." />	
+        <meta name="keywords" content="Nic Aslett, youtube, podcast, budgets, finances, financial interviews, budgeting help, saving money, budgeting stories, budgeting interviews, creating budgets, how to budget, track spending, track expenses, financial future, saving habits, denver colorado, budgeting success" />
 
-        <title>Budget Therapy</title>
+        <title>Nic Aslett</title>
         <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml">
 
         <!-- Font Awesome icons (free version)-->
@@ -37,7 +37,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="#home">Budget Therapy</a>
+                <a class="navbar-brand" href="#home">Nic Aslett</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
@@ -53,7 +53,7 @@
         <header class="masthead text-center text-white">
             <div class="masthead-content">
                 <div class="container">
-                    <!-- <h1 class="masthead-heading mb-0">Budget Therapy</h1> -->
+                    <!-- <h1 class="masthead-heading mb-0">Nic Aslett</h1> -->
                     <h1 class="masthead-heading mb-0">Real stories.<br>Practical steps.</h1>
                     <h2 class="masthead-subheading mb-0"><br>Start your budgeting journey with us!</h2>
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#about">Learn More</a>
@@ -415,7 +415,7 @@
                     </div>
                 </div> -->
                 <div class="d-flex align-items-center justify-content-center" style="margin-top: 1rem;">
-                    <a class="btn-youtube" href="https://www.youtube.com/@Budget-Therapy" target="_blank" aria-label="Go to Budget Therapy YouTube Channel">
+                    <a class="btn-youtube" href="https://www.youtube.com/@Budget-Therapy" target="_blank" aria-label="Go to Nic Aslett YouTube Channel">
                         <span class="fa-stack" style="vertical-align: top;">
                             <i class="fas fa-circle fa-stack-1x" style="color:#fff;"></i>
                             <i class="fas fa-brands fa-youtube fa-stack-2x"></i>
@@ -423,7 +423,7 @@
                     </a>
                 </div>
                 <div class="d-flex align-items-center justify-content-center" style="margin-top:10px;">
-                    <p>&copy; <span id="current-year"></span> <a href="https://www.sylentt.com" style="color: white;">Sylentt Partners LLC</a>, doing business as Budget Therapy. All rights reserved.</p>
+                    <p>&copy; <span id="current-year"></span> <a href="https://www.sylentt.com" style="color: white;">Sylentt Partners LLC</a>, doing business as Nic Aslett. All rights reserved.</p>
                 </div>
             </div>
         </footer>
