--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	    <meta property="og:title" content="Nic Aslett - Real Stories. Practical Steps." />	
         <meta name="keywords" content="Nic Aslett, youtube, podcast, budgets, finances, financial interviews, budgeting help, saving money, budgeting stories, budgeting interviews, creating budgets, how to budget, track spending, track expenses, financial future, saving habits, denver colorado, budgeting success" />
 
-        <title>Nic Aslett</title>
+        <title>Nice to meet you</title>
         <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml">
 
         <!-- Font Awesome icons (free version)-->
