--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	    <meta property="og:title" content="Nic Aslett - Real Stories. Practical Steps." />	
         <meta name="keywords" content="Nic Aslett, youtube, podcast, budgets, finances, financial interviews, budgeting help, saving money, budgeting stories, budgeting interviews, creating budgets, how to budget, track spending, track expenses, financial future, saving habits, denver colorado, budgeting success" />
 
-        <title>Nice to meet you</title>
+        <title>Nic Aslett</title>
         <link rel="icon" href="favicon.svg" sizes="any" type="image/svg+xml">
 
         <!-- Font Awesome icons (free version)-->
@@ -37,7 +37,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="#home">Nic Aslett</a>
+                <a class="navbar-brand" href="#home">Nice to meet you</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
