--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/coach">Budgeting Coach</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.sylentt.com">Sylentt Partners</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.budget-therapy.com">Budget Therapy</a></li>
                         <li class="nav-item"><a class="nav-link" href="#join">Join The Show</a></li>
                     </ul>
                 </div>
