Removing unnecessary assets and adding personal photos

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                                         <div class="card d-none d-md-block">
                                             <div class="card-body">
                                                 <p class="card-text">
-                                                    "His ability to provide constructive feedback not only empowers his team members but also promotes accountability and continuous improvement. As a result, Nic has enchanced team performance and prodcutivity, showcasing his evolution as a leader focused on both communication and operational efficiency."
+                                                    "His ability to provide constructive feedback not only empowers his team members but also promotes accountability and continuous improvement. Showcasing his evolution as a leader focused on both communication and operational efficiency."
                                                 </p>
                                             </div>
                                         </div>
@@ -160,7 +160,7 @@
                                         <div class="card">
                                             <div class="card-body">
                                                 <p class="card-text">
-                                                    "Nic asks thought provoking questions, and he contributes ideas that are genuinely innovative - without fear of judgement. He has vision and is not blindly caught up in following business processes,"
+                                                    "Nic asks thought provoking questions, and he contributes ideas that are genuinely innovative - without fear of judgement. He has vision and is not blindly caught up in following business processes."
                                                 </p>
                                             </div>
                                         </div>
@@ -225,7 +225,7 @@
             <div class="container custom-p-large">
                 <div class="row align-items-center">
                     <div class="col-lg-12">
-                        <h2 class="display-4" style="margin-top:35px;">Be a part of our Podcast!</h2>
+                        <h2 class="display-4" style="margin-top:35px;">Reach out to have a conversation!</h2>
                         <p style="margin-bottom: 2rem;">If you are looking for the perfect candidate, look no further! If you want to get in contact with me, fill out this basic form and I will respond as soon as available!</p>
                         
                         <form class="row g-3 needs-validation" id="join-show-form" style="margin-bottom: 50px;background-color: #e7e7e7;border-radius: 8px;padding-left: 0.5rem;padding-right:0.5rem;" onsubmit="return submitGoogleForm(event)" novalidate="">
