--- a/index.html
+++ b/index.html
@@ -64,14 +64,20 @@
 
         <!-- Content About More About My Brand Section -->
         <section id="about">
+            <div class="sticky-header">
+                <div class="container custom-p">
+                    <div class="row align-items-center justify-content-center text-center">
+                        <h2 class="display-4 fw-bold">More About My Background</h2>
+                    </div>
+                </div>
+            </div>
             <div class="container custom-p">
                 <div class="row custom-g align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="custom-p-all"><img class="img-fluid rounded-edges shadow-sm" src="assets/img/about-1.webp" alt="..." /></div>
+                        <div class="custom-p-all"><img class="img-fluid rounded-edges shadow-sm" src="assets/img/about-1.png" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="custom-p-all">
-                            <h2 class="display-4">More About My Background</h2>
                             <p>At the core of my professional identity is a commitment to clarity, reliability, and meaningful progress. I’m known for being a steady force—someone who can step into ambiguity, assess what matters, and lead teams toward measurable, lasting outcomes. My brand is about bridging gaps: between people and technology, leadership and execution, strategic vision and day-to-day operations. I approach problems with a critical mindset and a bias toward solutions that scale, while remaining grounded in the needs of the people behind the systems.
                             <p>I don’t build for the sake of building—I build with purpose. Whether I’m modernizing IT infrastructure, improving support operations, or developing leadership capacity within a team, I ensure that the work reflects shared goals and supports long-term growth. My reputation is built on trust, follow-through, and the ability to see the full picture while never losing sight of the details that matter.</p>
                         </div>
@@ -82,14 +88,20 @@
 
         <!-- Content About Who I Am Section -->
         <section>
+            <div class="sticky-header">
+                <div class="container custom-p">
+                    <div class="row align-items-center justify-content-center text-center">
+                        <h2 class="display-4 fw-bold">Who I Am</h2>
+                    </div>
+                </div>
+            </div>
             <div class="container custom-p">
                 <div class="row custom-g align-items-center">
                     <div class="col-lg-6">
-                        <div class="custom-p-all"><img class="img-fluid rounded-edges shadow-sm" src="assets/img/about-2.webp" alt="..." /></div>
+                        <div class="custom-p-all"><img class="img-fluid rounded-edges shadow-sm" src="assets/img/about-2.png" alt="..." /></div>
                     </div>
                     <div class="col-lg-6">
                         <div class="custom-p-all">
-                            <h2 class="display-4">Who I Am</h2>
                             <p>I bring a unique blend of strategic thinking, operational execution, and people-centered leadership to every organization I join. With a proven track record of aligning IT operations with broader business goals, I focus on creating systems and environments that are not just efficient, but genuinely supportive of the people who rely on them. I’ve consistently driven improvements in service delivery, team performance, and cross-functional collaboration by focusing on clarity, accountability, and sustainable progress—not just quick wins.</p>
                             <p>What sets me apart is my ability to identify what matters most in any complex or evolving environment, and to lead with empathy and precision. Whether I’m navigating organizational change, streamlining infrastructure, or mentoring technical staff, my impact is seen in the trust I build, the stability I create, and the momentum I help teams carry forward. I don’t just solve problems—I build frameworks that prevent them, elevate others, and leave things better than I found them.</p>
                         </div>
