--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="container custom-p">
                 <div class="row custom-g align-items-center">
                     <div class="col-lg-6 order-lg-2">
-                        <div class="custom-p-all"><img class="img-fluid rounded-edges shadow-sm" src="assets/img/about-1.png" alt="..." /></div>
+                        <div class="custom-p-all"><img class="img-fluid rounded-edges shadow-sm" src="assets/img/about-1.webp" alt="..." /></div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="custom-p-all">
@@ -98,7 +98,7 @@
             <div class="container custom-p">
                 <div class="row custom-g align-items-center">
                     <div class="col-lg-6">
-                        <div class="custom-p-all"><img class="img-fluid rounded-edges shadow-sm" src="assets/img/about-2.png" alt="..." /></div>
+                        <div class="custom-p-all"><img class="img-fluid rounded-edges shadow-sm" src="assets/img/about-2.webp" alt="..." /></div>
                     </div>
                     <div class="col-lg-6">
                         <div class="custom-p-all">
