--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                         </div>
 
                     </div>
-                </div> -->
+                </div>
                 <div class="d-flex align-items-center justify-content-center" style="margin-top: 1rem;">
                     <a class="btn-youtube" href="https://www.youtube.com/@Budget-Therapy" target="_blank" aria-label="Go to Nic Aslett YouTube Channel">
                         <span class="fa-stack" style="vertical-align: top;">
@@ -341,9 +341,9 @@
                     </a>
                 </div>
                 <div class="d-flex align-items-center justify-content-center" style="margin-top:10px;">
-                    <p>&copy; <span id="current-year"></span> <a href="https://www.sylentt.com" style="color: white;">Sylentt Partners LLC</a>, doing business as Nic Aslett. All rights reserved.</p>
+                    <p>&copy; <span id="current-year"></span>
                 </div>
-            </div>
+            </div> -->
         </footer>
 
         <!-- current year script-->
