--- a/index.html
+++ b/index.html
@@ -64,10 +64,14 @@
 
         <!-- Content About More About My Brand Section -->
         <section id="about">
-            <button class="collapsible">Click to Expand</button>
-            <div class="content">
-                <p>This is the expandable content. You can customize it with any HTML elements!</p>
+
+
+            <button class="collapsible-centered">Click to See Résumé</button>
+            <div class="content row align-items-center justify-content-center text-center">
+              <iframe src="https://drive.google.com/file/d/1bUb2x7nHzDeDBftG6KpO2eD4o_veWQzN/preview" allow="autoplay" frameborder="0" title="Embedded Résumé"></iframe>
             </div>
+
+
             <div class="sticky-header">
                 <div class="container custom-p">
                     <div class="row align-items-center justify-content-center text-center">
