--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         <!-- Footer-->
         <footer class="pt-1 pb-1" style="background-color:#342e2e;color:#e9e9e9;">
             <div class="container">
-                <div class="d-flex align-items-center justify-content-center">
+                <!-- <div class="d-flex align-items-center justify-content-center">
                     <svg width="200px" height="200px" viewBox="0 0 800 800" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve" xmlns:serif="http://www.serif.com/" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linejoin:round;stroke-miterlimit:2;">
                         <g transform="matrix(1.05548,-2.78764e-17,2.78764e-17,1.05548,-15.9299,-14.2937)">
                             <g>
@@ -327,7 +327,7 @@
                             </g>
                         </g>
                     </svg>
-                </div>
+                </div> -->
                 <!-- <div class="d-flex align-items-center justify-content-center">
                     <p class="text-center">Sign up with your email address to receive news and updates.</p>
                 </div>
@@ -347,11 +347,11 @@
                             <i class="fas fa-brands fa-youtube fa-stack-2x"></i>
                         </span>
                     </a>
-                </div>
+                </div> -->
                 <div class="d-flex align-items-center justify-content-center" style="margin-top:10px;">
-                    <p>&copy; <span id="current-year"></span>
+                    <p>&copy; <span id="current-year"></span> Nicholas Aslett</p>
                 </div>
-            </div> -->
+            </div>
         </footer>
 
         <!-- current year script-->
