Reduced master statement

--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
             <div class="masthead-content">
                 <div class="container">
                     <!-- <h1 class="masthead-heading mb-0">Nic Aslett</h1> -->
-                    <h1 class="masthead-heading mb-0">Technical Leader Driving Innovation.<br>Impacts Through Expertise and Vision.</h1>
-                    <h2 class="masthead-subheading mb-0"><br>See how I can help build your team!</h2>
+                    <h1 class="masthead-heading mb-0">Technical Leader Innovating with<br>Expertise and Vision</h1>
                     <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#about">Learn More</a>
                 </div>
             </div>
