--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <head>
             <style>
               .masthead-custom {
-                background-image: linear-gradient(rgba(49, 49, 49, 0.5), rgba(49, 49, 49, 0.5)), url('https://www.nicaslett.info/assets/img/masthead.webp') !important; /* Overrides stylesheet */
+                background-image: url('https://www.nicaslett.info/assets/img/masthead.webp') !important; /* Overrides stylesheet */
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
