added gradient, updated iframe link, changed title

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
             <div class="container px-5">
-                <a class="navbar-brand" href="#home">Nice to meet you</a>
+                <a class="navbar-brand" href="#home">Hey it's Nic!</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
@@ -54,7 +54,7 @@
         <head>
             <style>
               .masthead-custom {
-                background-image: url('https://www.nicaslett.info/assets/img/masthead.webp') !important; /* Overrides stylesheet */
+                background-image: linear-gradient(rgba(49, 49, 49, 0.5), rgba(49, 49, 49, 0.5)), url('https://www.nicaslett.info/assets/img/masthead.webp') !important; /* Overrides stylesheet */
                 background-size: cover;
                 background-position: center;
                 background-repeat: no-repeat;
