--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
             </header>
 
-        <!-- Content About More About My Brand Section -->
+        <!-- Content About Who I Am Section -->
         <section id="about">
 
 
@@ -83,7 +83,7 @@
             <div class="sticky-header">
                 <div class="container custom-p">
                     <div class="row align-items-center justify-content-center text-center">
-                        <h2 class="display-4 fw-bold">More About My Background</h2>
+                        <h2 class="display-4 fw-bold">Who I Am</h2>
                     </div>
                 </div>
             </div>
@@ -94,20 +94,20 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="custom-p-all">
-                            <p>At the core of my professional identity is a commitment to clarity, reliability, and meaningful progress. I’m known as a steady force—someone who steps into ambiguity, identifies what matters, and leads teams toward lasting outcomes. My brand bridges gaps: between people and technology, leadership and execution, strategy and operations. I approach problems critically, favoring scalable solutions grounded in the real needs of those behind the systems.
-                            <p>I don’t build for the sake of building—I build with purpose. Whether modernizing infrastructure, improving support operations, or developing team leadership, I ensure the work reflects shared goals and drives long-term growth. My reputation is built on trust, follow-through, and an ability to see the full picture without losing sight of the critical details.</p>
+                            <p>I bring a blend of strategic thinking, operational execution, and people-centered leadership to every organization I join. With a track record of aligning IT operations to business goals, I focus on building systems that are not only efficient but truly supportive of the people who depend on them. I’ve led improvements in service delivery, team performance, and collaboration by emphasizing clarity, accountability, and long-term progress—not just quick wins.</p>
+                            <p>What sets me apart is the ability to focus on what matters most in complex environments, leading with both empathy and precision. Whether navigating change, streamlining infrastructure, or mentoring staff, my impact is seen in the trust I build, the stability I create, and the momentum I help teams sustain. I don’t just solve problems—I build frameworks that prevent them and leave organizations stronger than I found them.</p>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- Content About Who I Am Section -->
+        <!-- Content About My Brand Section -->
         <section>
             <div class="sticky-header">
                 <div class="container custom-p">
                     <div class="row align-items-center justify-content-center text-center">
-                        <h2 class="display-4 fw-bold">Who I Am</h2>
+                        <h2 class="display-4 fw-bold">More About My Background</h2>
                     </div>
                 </div>
             </div>
@@ -118,8 +118,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="custom-p-all">
-                            <p>At the core of my professional identity is a commitment to clarity, reliability, and meaningful progress. I’m known for being a steady force—someone who can step into ambiguity, assess what matters, and lead teams toward measurable, lasting outcomes. My brand is about bridging gaps: between people and technology, leadership and execution, strategic vision and day-to-day operations. I approach problems with a critical mindset and a bias toward solutions that scale, while remaining grounded in the needs of the people behind the systems.</p>
-                            <p>I don’t build for the sake of building—I build with purpose. Whether I’m modernizing IT infrastructure, improving support operations, or developing leadership capacity within a team, I ensure that the work reflects shared goals and supports long-term growth. My reputation is built on trust, follow-through, and the ability to see the full picture while never losing sight of the details that matter.</p>
+                            <p>At the core of my professional identity is a commitment to clarity, reliability, and meaningful progress. I’m known as a steady force—someone who steps into ambiguity, identifies what matters, and leads teams toward lasting outcomes. My brand bridges gaps: between people and technology, leadership and execution, strategy and operations. I approach problems critically, favoring scalable solutions grounded in the real needs of those behind the systems.
+                            <p>I don’t build for the sake of building—I build with purpose. Whether modernizing infrastructure, improving support operations, or developing team leadership, I ensure the work reflects shared goals and drives long-term growth. My reputation is built on trust, follow-through, and an ability to see the full picture without losing sight of the critical details.</p>
                         </div>
                     </div>
                 </div>
