Added resume button

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="masthead-content">
                     <div class="container">
                         <h1 class="masthead-heading mb-0">Technical Leader Innovating with<br>Expertise and Vision</h1>
-                        <a class="btn btn-primary btn-xl rounded-pill mt-5" href="#about">Learn More</a>
+                        <a class="btn btn-primary btn-xl rounded-pill mt-5" href="https://drive.google.com/file/d/1bUb2x7nHzDeDBftG6KpO2eD4o_veWQzN/view?usp=sharing">Résumé</a>
                     </div>
                 </div>
             </header>
@@ -94,8 +94,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="custom-p-all">
-                            <p>I bring a blend of strategic thinking, operational execution, and people-centered leadership to every organization I join. With a track record of aligning IT operations to business goals, I focus on building systems that are not only efficient but truly supportive of the people who depend on them. I’ve led improvements in service delivery, team performance, and collaboration by emphasizing clarity, accountability, and long-term progress—not just quick wins.</p>
-                            <p>What sets me apart is the ability to focus on what matters most in complex environments, leading with both empathy and precision. Whether navigating change, streamlining infrastructure, or mentoring staff, my impact is seen in the trust I build, the stability I create, and the momentum I help teams sustain. I don’t just solve problems—I build frameworks that prevent them and leave organizations stronger than I found them.</p>
+                            <p>I’m all about clarity, dependability, and making real progress. People see me as someone who can handle uncertainty, figure out what’s important, and guide teams to results that stick. I connect the dots—between people and tech, leadership and action, strategy and day-to-day work. I tackle problems thoughtfully, focusing on solutions that scale and actually meet the needs of the people using them.</p>
+                            <p>I don’t just build stuff for the sake of it—I build with a purpose. Whether I’m updating systems, improving support, or helping teams grow, I make sure the work lines up with shared goals and sets things up for the long haul. I’m known for earning trust, following through, and keeping the big picture in view while still sweating the small stuff.</p>
                         </div>
                     </div>
                 </div>
