--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 <div class="masthead-content">
                     <div class="container">
                         <h1 class="masthead-heading mb-0">Technical Leader Innovating with<br>Expertise and Vision</h1>
-                        <a class="btn btn-primary btn-xl rounded-pill mt-5" href="https://drive.google.com/file/d/1bUb2x7nHzDeDBftG6KpO2eD4o_veWQzN/view?usp=sharing">Résumé</a>
+                        <a class="btn btn-primary btn-xl rounded-pill mt-5" href="https://drive.google.com/file/d/1bUb2x7nHzDeDBftG6KpO2eD4o_veWQzN/view?usp=sharing" target="_blank">Résumé</a>
                     </div>
                 </div>
             </header>
