--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
         <section id="about">
 
 
-            <button class="collapsible-centered">Click to See Résumé</button>
+            <!--<button class="collapsible-centered">Click to See Résumé</button>
             <div class="content row align-items-center justify-content-center text-center">
               <iframe src="https://drive.google.com/file/d/1bUb2x7nHzDeDBftG6KpO2eD4o_veWQzN/preview" allow="autoplay" frameborder="0" title="Embedded Résumé"></iframe>
-            </div>
+            </div> -->
 
 
             <div class="sticky-header">
