--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-6 offset-md-3 text-center">
-                                    <label for="company" class="form-label">Company <span class="text-required">*</span></label>
+                                    <label for="company" class="form-label" style="font-size: 1.2rem;">Company <span class="text-required">*</span></label>
                                     <input type="text" class="form-control" id="company" name="company" required maxlength="1000">
                                     <div class="valid-feedback">Looks Good!</div>
                                     <div class="invalid-feedback">Please provide the company name.</div>
