--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 background-position: center;
                 background-repeat: no-repeat;
                 min-height: 50vh;
-                height: auto;
+                max-height: 60vh;
                 padding: 0rem 0;
                 margin-bottom: 0;
               }
