--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 <div class="row align-items-center">
                     <div class="col-lg-12">
                         <h2 class="display-4" style="margin-top:35px;">Reach out to have a conversation!</h2>
-                        <p style="margin-bottom: 2rem;">If you are looking for the perfect candidate, look no further! If you want to get in contact with me, fill out this basic form and I will respond as soon as available!</p>
+                        <p style="margin-bottom: 2rem;">If you are looking for the perfect candidate, look no further! If you want to get in contact with me, fill out this form and I will respond as soon as available!</p>
                         
                         <form class="row g-3 needs-validation" id="join-show-form" style="margin-bottom: 50px;background-color: #e7e7e7;border-radius: 8px;padding-left: 0.5rem;padding-right:0.5rem;padding-top:0.1rem;" onsubmit="return submitGoogleForm(event)" novalidate="">
                             <div class="col-12" id="email-catch-div">
