--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="sticky-header">
                 <div class="container custom-p">
                     <div class="row align-items-center justify-content-center text-center">
-                        <h2 class="display-4 fw-bold">More About My Background</h2>
+                        <h2 class="display-4 fw-bold">I don’t just manage IT—I architect stability at scale.</h2>
                     </div>
                 </div>
             </div>
@@ -133,8 +133,8 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="custom-p-all">
-                            <p>At the core of my professional identity is a commitment to clarity, reliability, and meaningful progress. I’m known as a steady force—someone who steps into ambiguity, identifies what matters, and leads teams toward lasting outcomes. My brand bridges gaps: between people and technology, leadership and execution, strategy and operations. I approach problems critically, favoring scalable solutions grounded in the real needs of those behind the systems.
-                            <p>I don’t build for the sake of building—I build with purpose. Whether modernizing infrastructure, improving support operations, or developing team leadership, I ensure the work reflects shared goals and drives long-term growth. My reputation is built on trust, follow-through, and an ability to see the full picture without losing sight of the critical details.</p>
+                            <p>I lead through complexity, not around it. With a background spanning IT ops, support leadership, infrastructure strategy, and vendor management, I’ve spent my career turning fractured systems and reactive teams into durable, aligned engines of growth. I build frameworks that don’t just work—they last, and I do it by anchoring everything to what matters most: people, performance, and clarity.</p>
+                            <p>I’m not in the business of duct tape fixes. I lead transformations that stick—whether that means stabilizing service delivery across downsized teams, unifying fractured platforms, or coaching technical talent into strategic thinkers. If your environment is chaotic, misaligned, or just treading water—I make it move forward, fast, and with purpose.</p>
                         </div>
                     </div>
                 </div>
