--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="sticky-header">
                 <div class="container custom-p">
                     <div class="row align-items-center justify-content-center text-center">
-                        <h2 class="display-4 fw-bold">I don’t just manage IT—I architect stability at scale.</h2>
+                        <h2 class="display-4 fw-bold">I don’t just manage IT - I architect stability at scale.</h2>
                     </div>
                 </div>
             </div>
