--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
                     <div class="col-lg-6">
                         <div class="custom-p-all">
                             <p>I lead through complexity, not around it. With a background spanning IT ops, support leadership, infrastructure strategy, and vendor management, I’ve spent my career turning fractured systems and reactive teams into durable, aligned engines of growth. I build frameworks that don’t just work - they last, and I do it by anchoring everything to what matters most: people, performance, and clarity.</p>
-                            <p>I’m not in the business of duct tape fixes. I lead transformations that stick—whether that means stabilizing service delivery across downsized teams, unifying fractured platforms, or coaching technical talent into strategic thinkers. If your environment is chaotic, misaligned, or just treading water, I make it move forward, fast, and with purpose.</p>
+                            <p>I’m not in the business of duct tape fixes. I lead transformations that stick. Whether that means stabilizing service delivery across downsized teams, unifying fractured platforms, or coaching technical talent into strategic thinkers. If your environment is chaotic, misaligned, or just treading water, I make it move forward, fast, and with purpose.</p>
                         </div>
                     </div>
                 </div>
