--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="custom-p-all">
-                            <p>I’m all about clarity, dependability, and making real progress. People see me as someone who can handle uncertainty, figure out what’s important, and guide teams to results that stick. I connect the dots—between people and tech, leadership and action, strategy and day-to-day work. I tackle problems thoughtfully, focusing on solutions that scale and actually meet the needs of the people using them.</p>
-                            <p>I don’t just build stuff for the sake of it—I build with a purpose. Whether I’m updating systems, improving support, or helping teams grow, I make sure the work lines up with shared goals and sets things up for the long haul. I’m known for earning trust, following through, and keeping the big picture in view while still sweating the small stuff.</p>
+                            <p>Outside of work, I’m someone who thrives on personal projects. Whether it’s mentoring, rethinking how I engage with my home network, or just stepping outside to reset. I believe how we spend our time off the clock deeply influences how we lead, collaborate, and show up in challenging moments. That’s why I prioritize experiences that ground me, give me perspective, and recharge my ability to lead with clarity and intent.</p>
+                            <p>I’m also a lifelong learner and a bit of a hands-on problem solver. I enjoy bowling for the focus it brings, video games for the strategy and immersion, and home theater for the joy of crafting great experiences. I’m not afraid to tear something apart to rebuild it better. It can be a piece of tech, a room in my house, or a way of working. That curiosity and care shows up in how I lead teams and shape systems: always looking to understand how things work and how they could work better.</p>
                         </div>
                     </div>
                 </div>
