--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                         <h1 class="masthead-heading mb-5">Technical Leader Innovating with<br>Expertise and Vision</h1>
                         <a class="btn btn-primary btn-md rounded-top mt-3" href="https://drive.google.com/file/d/1bUb2x7nHzDeDBftG6KpO2eD4o_veWQzN/view?usp=sharing" target="_blank" style="font-size: 20px; text-transform: none; background-color: #e7e7e7; border-color: #3f3f3f; color: #000000;">Résumé</a>
                         <div>
-                            <a class="btn btn-primary btn-md rounded-top mt-3" href="https://drive.google.com/file/d/1bUb2x7nHzDeDBftG6KpO2eD4o_veWQzN/view?usp=sharing" target="_blank" style="font-size: 20px; text-transform: none; background-color: #e7e7e7; border-color: #3f3f3f; color: #000000;">Sylentt Partners</a>
-                            <a class="btn btn-primary btn-md rounded-top mt-3" href="https://drive.google.com/file/d/1bUb2x7nHzDeDBftG6KpO2eD4o_veWQzN/view?usp=sharing" target="_blank" style="font-size: 20px; text-transform: none; background-color: #e7e7e7; border-color: #3f3f3f; color: #000000;">Budget Therapy</a>
+                            <a class="btn btn-primary btn-md rounded-top mt-3" href="https://www.sylentt.com" target="_blank" style="font-size: 20px; text-transform: none; background-color: #e7e7e7; border-color: #3f3f3f; color: #000000;">Sylentt Partners</a>
+                            <a class="btn btn-primary btn-md rounded-top mt-3" href="https://www.budget-therapy.com" target="_blank" style="font-size: 20px; text-transform: none; background-color: #e7e7e7; border-color: #3f3f3f; color: #000000;">Budget Therapy</a>
                         </div>
                     </div>
                 </div>
